--- a/dashboard/public/styles/index.css
+++ b/dashboard/public/styles/index.css
@@ -2,12 +2,17 @@ html {
 	font-family: Verdana,Geneva,sans-serif;
 }
 
+a {
+	color: black;
+	text-decoration: none;
+}
+
 .graphlistitem {
 	background-color: rgb(242, 241, 240);
 	border: 1px solid rgb(242, 241, 240);
 	padding: 10px;
-	margin-left:30%;
-	margin-right:30%;
+	margin-left:25%;
+	margin-right:25%;
 	margin-bottom:10px;
 	border-radius: 5px;
 	text-align: center;
