--- a/dashboard/views/partials/timeInterval.handlebars
+++ b/dashboard/views/partials/timeInterval.handlebars
@@ -3,10 +3,10 @@
 		<span class="paramtitle">Time Interval: </span>
 	</td>
 	<td>
-		<button class="ti" value="s">Second</button>
-		<button class="ti" value="m">Minute</button>
-		<button class="ti paramselected" value="h">Hourly</button>
-		<button class="ti" value="d">Daily</button>
-		<button class="ti" value="w">Weekly</button>
+		<button class="ti" id="ti-s" value="s">Second</button>
+		<button class="ti" id="ti-m" value="m">Minute</button>
+		<button class="ti" id="ti-h" value="h">Hourly</button>
+		<button class="ti" id="ti-d" value="d">Daily</button>
+		<button class="ti" id="ti-w" value="w">Weekly</button>
 	</td>
 </tr>
