--- a/dashboard/views/partials/timeRange.handlebars
+++ b/dashboard/views/partials/timeRange.handlebars
@@ -3,13 +3,13 @@
 		<span class="paramtitle">Time Range: </span>
 	</td>
 	<td>
-		<button class="tr" value="1h">1 hour</button>
-		<button class="tr" value="4h">4 hours</button>
-		<button class="tr" value="12h">12 hours</button>
-		<button class="tr" value="24h">24 hours</button>
-		<button class="tr paramselected" value="7d">7 days</button>
-		<button class="tr" value="30d">30 days</button>
-		<button class="tr" value="90d">90 days</button>
-		<button class="tr" value="6m">6 months</button>
+		<button class="tr" id="tr-1h" value="1h">1 hour</button>
+		<button class="tr" id="tr-4h" value="4h">4 hours</button>
+		<button class="tr" id="tr-12h" value="12h">12 hours</button>
+		<button class="tr" id="tr-24h" value="24h">24 hours</button>
+		<button class="tr" id="tr-7d" value="7d">7 days</button>
+		<button class="tr" id="tr-30d" value="30d">30 days</button>
+		<button class="tr" id="tr-90d" value="90d">90 days</button>
+		<button class="tr" id="tr-6m" value="6m">6 months</button>
 	</td>
 </tr>
