6months error fix

--- a/dashboard/views/partials/timeRange.handlebars
+++ b/dashboard/views/partials/timeRange.handlebars
@@ -10,6 +10,6 @@
 		<button class="tr" id="tr-7d" value="7d">7 days</button>
 		<button class="tr" id="tr-30d" value="30d">30 days</button>
 		<button class="tr" id="tr-90d" value="90d">90 days</button>
-		<button class="tr" id="tr-6m" value="6m">6 months</button>
+		<button class="tr" id="tr-6m" value="6M">6 months</button>
 	</td>
 </tr>
