--- a/dashboard/views/displayGraph.handlebars
+++ b/dashboard/views/displayGraph.handlebars
@@ -4,6 +4,7 @@
 		{{#each defaults}}
 			var {{this.[0]}} = "{{this.[1]}}";
 		{{/each}}
+		var timeRange_default = "";
 		var endpointList = "";
 		var link_template = "{{{link}}}";
 	</script>
