--- a/dashboard/views/partials/timeRange.handlebars
+++ b/dashboard/views/partials/timeRange.handlebars
@@ -3,13 +3,27 @@
 		<span class="paramtitle">Time Range: </span>
 	</td>
 	<td>
-		<button class="tr" id="tr-1h" value="1h">1 hour</button>
-		<button class="tr" id="tr-4h" value="4h">4 hours</button>
-		<button class="tr" id="tr-12h" value="12h">12 hours</button>
-		<button class="tr" id="tr-24h" value="24h">24 hours</button>
-		<button class="tr" id="tr-7d" value="7d">7 days</button>
-		<button class="tr" id="tr-30d" value="30d">30 days</button>
-		<button class="tr" id="tr-90d" value="90d">90 days</button>
-		<button class="tr" id="tr-6M" value="6M">6 months</button>
+		<span id="tr-nocust">
+			<button class="tr" id="tr-1h" value="1h">1 hour</button>
+			<button class="tr" id="tr-4h" value="4h">4 hours</button>
+			<button class="tr" id="tr-12h" value="12h">12 hours</button>
+			<button class="tr" id="tr-24h" value="24h">24 hours</button>
+			<button class="tr" id="tr-7d" value="7d">7 days</button>
+			<button class="tr" id="tr-30d" value="30d">30 days</button>
+			<button class="tr" id="tr-90d" value="90d">90 days</button>
+			<button class="tr" id="tr-6M" value="6M">6 months</button>
+		</span>
+		<span id="tr-nocust_opp">
+			<button id="tr-cancel-cust"> X </button>
+		</span>
+		&nbsp;&nbsp;
+		<button class="tr" id="tr-custom" value="custom">Custom</button>
+		<span id="tr-cust-options">
+			<input id="tr-cust-options-input" />
+			<button class="tr-op" id="tr-op-m" value="m">Minutes</button>
+			<button class="tr-op" id="tr-op-h" value="h">Hours</button>
+			<button class="tr-op" id="tr-op-d" value="d">Days</button>
+			<button class="tr-op" id="tr-op-M" value="M">Months</button>
+		</span>
 	</td>
 </tr>
