--- a/dashboard/views/displayGraph.handlebars
+++ b/dashboard/views/displayGraph.handlebars
@@ -5,6 +5,8 @@
 			var {{this.[0]}} = "{{this.[1]}}";
 		{{/each}}
 		var timeRange_default = "";
+		var timeInterval_default = "";
+		var timeIntervalCustom = "2h";
 		var endpointList = "";
 		var link_template = "{{{link}}}";
 	</script>
