--- a/dashboard/views/partials/timeRange.handlebars
+++ b/dashboard/views/partials/timeRange.handlebars
@@ -13,17 +13,6 @@
 			<button class="tr" id="tr-90d" value="90d">90 days</button>
 			<button class="tr" id="tr-6M" value="6M">6 months</button>
 		</span>
-		<span id="tr-nocust_opp">
-			<button id="tr-cancel-cust"> X </button>
-		</span>
-		&nbsp;&nbsp;
-		<button class="tr" id="tr-custom" value="custom">Custom</button>
-		<span id="tr-cust-options">
-			<input id="tr-cust-options-input" />
-			<button class="tr-op" id="tr-op-m" value="m">Minutes</button>
-			<button class="tr-op" id="tr-op-h" value="h">Hours</button>
-			<button class="tr-op" id="tr-op-d" value="d">Days</button>
-			<button class="tr-op" id="tr-op-M" value="M">Months</button>
-		</span>
+		{{> timeRangeCustom}}
 	</td>
 </tr>
