--- a/dashboard/views/index.handlebars
+++ b/dashboard/views/index.handlebars
@@ -6,6 +6,6 @@
 </div>
 <div id="graphoptions">
 	{{#each graphNames}}
-		<a class="graphlistitem" href="http://localhost:8000/graph/{{@key}}">{{@key}}</a>
+		<a class="graphlistitem" href="http://localhost:8000/graph/view/{{@key}}">{{@key}}</a>
 	{{/each}}
 </div>
