adding port status

--- a/dashboard/views/index.handlebars
+++ b/dashboard/views/index.handlebars
@@ -1,6 +1,8 @@
 {{#section 'head'}}
 	<link rel="stylesheet" type="text/css" href="styles/index.css">
+	<link rel="stylesheet" type="text/css" href="styles/status.css">
 {{/section}}
+{{> status}}
 <div id="graphoptionstitle">
 	Select from available Graphs
 </div>
