--- a/dashboard/views/index.handlebars
+++ b/dashboard/views/index.handlebars
@@ -1,11 +1,12 @@
 {{#section 'head'}}
-	<link rel="stylesheet" type="text/css" href="styles/index.css">
-	<link rel="stylesheet" type="text/css" href="styles/status.css">
+	<link rel="stylesheet" type="text/css" href="/styles/index.css">
+	<link rel="stylesheet" type="text/css" href="/styles/status.css">
 {{/section}}
 {{> status}}
 <div id="graphoptionstitle">
-	Select from available Graphs
+	Select from available graphs
 </div>
+<br>
 <div id="graphoptions">
 	{{#each graphNames}}
 		<a class="graphlistitem" href="http://localhost:8000/graph/view/{{@key}}">{{@key}}</a>
