--- a/dashboard/public/styles/displayGraph.css
+++ b/dashboard/public/styles/displayGraph.css
@@ -9,6 +9,10 @@ button {
 	cursor: pointer;
 }
 
+button::-moz-focus-inner {
+	border: 0;
+}
+
 td {
 	padding-bottom: 5px;
 }
@@ -16,6 +20,10 @@ td {
 a {
 	color: black;
 	text-decoration: none;
+}
+
+a:focus {
+	outline: none;
 }
 
 iframe {
@@ -35,6 +43,9 @@ iframe {
 	border-radius: 5px;
 	border: 1px solid rgb(105, 105, 105);
 	background-color: rgb(242, 241, 240);
+}
+#titlespan:hover {
+	background-color: white;
 }
 #blankspan {
 	width:10px;
