--- a/dashboard/public/styles/index.css
+++ b/dashboard/public/styles/index.css
@@ -7,6 +7,10 @@ a {
 	text-decoration: none;
 }
 
+a:focus {
+	outline:none;
+}
+
 .graphlistitem {
 	background-color: rgb(242, 241, 240);
 	border: 1px solid rgb(105, 105, 105);
