--- a/dashboard/public/styles/displayGraph.css
+++ b/dashboard/public/styles/displayGraph.css
@@ -1,3 +1,19 @@
+/*
+// Copyright 2017, RadiantBlue Technologies, Inc.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+// http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+*/
+
 html {
 	font-family: Verdana,Geneva,sans-serif;
 }
@@ -52,7 +68,8 @@ iframe {
 }
 
 #graphdiv {
-	text-align:center
+	text-align:center;
+	margin-bottom:50px;
 }
 
 #updatebtn {
@@ -83,5 +100,42 @@ iframe {
 
 .paramselected {
 	background-color: orange;
+}
+
+#logs{
+	width:100%;
+	position: fixed;
+	bottom: -5px;
+}
+#logs_wrapper{
+	margin-left: auto;
+	margin-right: auto;
+	height:40px;
+	width: 800px;
+	position: relative;
+	text-align: center;
+}
+#logs_wrapper button{
+	height: 100%;
+	width: 100%;
+	font-size:16px;
+	font-style:bold;
+}
+.chevron::before {
+	border-style: solid;
+	border-width: 0.25em 0.25em 0 0;
+	content: '';
+	display: inline-block;
+	height: 0.35em;
+	left: 0.25em;
+	position: relative;
+	top: 0.30em;
+	transform: rotate(-45deg);
+	vertical-align: top;
+	width: 0.35em;
+}
+.chevron.chevron_bottom:before {
+	top: 0.15em;
+	transform: rotate(135deg);
 }
 
