--- a/dashboard/views/partials/status.handlebars
+++ b/dashboard/views/partials/status.handlebars
@@ -37,4 +37,7 @@ limitations under the License.
 		</tr>
 	</table>
 </div>
-<script src="/js/status.js"></script>
+
+{{#section 'foot'}}
+	<script src="/js/status.js"></script>
+{{/section}}
