--- a/dashboard/views/index.handlebars
+++ b/dashboard/views/index.handlebars
@@ -25,6 +25,6 @@ limitations under the License.
 <br>
 <div id="graphoptions">
 	{{#each graphNames}}
-		<a class="graphlistitem" href="http://localhost:8000/graph/view/{{@key}}">{{@key}}</a>
+		<a class="graphlistitem" href="http://localhost:8000/graph/{{@key}}">{{@key}}</a>
 	{{/each}}
 </div>
