--- a/dashboard/views/partials/logs.handlebars
+++ b/dashboard/views/partials/logs.handlebars
@@ -20,7 +20,7 @@ limitations under the License.
 
 <div id="logs" class="{{logShow}}">
 	<div id="logs_wrapper">
-		<button id="show-logs-btn">LOGS <span id="log-chev" class="chevron chevron_top"></span></button>
+		<button id="show-logs-btn">LOGS <span id="log-chev" class="chevron"></span></button>
 	</div>
 </div>
 
