--- a/dashboard/views/partials/logs.handlebars
+++ b/dashboard/views/partials/logs.handlebars
@@ -22,6 +22,9 @@ limitations under the License.
 	<div id="logs_wrapper">
 		<button id="show-logs-btn">LOGS <span id="log-chev" class="chevron"></span></button>
 	</div>
+	<div id="logs_body">
+	
+	</div>
 </div>
 
 
