--- a/dashboard/public/styles/displayLogs.css
+++ b/dashboard/public/styles/displayLogs.css
@@ -16,22 +16,49 @@
 
 #logs{
 	width:100%;
-	position: fixed;
-	bottom: -5px;
+	z-index: 999;
 }
 #logs_wrapper{
 	margin-left: auto;
 	margin-right: auto;
 	height:40px;
-	width: 800px;
+	width: 600px;
 	position: relative;
 	text-align: center;
+	bottom: -5px;
+	z-index: 99;
 }
 #logs_wrapper button{
 	height: 100%;
 	width: 100%;
 	font-size:16px;
 	font-style:bold;
+}
+#logs_body{
+	margin-left: auto;
+	margin-right: auto;
+	width: 85%;
+	position: relative;
+	text-align: center;
+	border: 1px solid black;
+	border-radius: 5px;
+	background: white;
+}
+#overlaydiv{
+	position:fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	background: rgba(0, 0, 0, 0.5);
+}
+#overlaydiv.show{
+	z-index: 50;
+	display: block;
+}
+#overlaydiv.hide{
+	z-index: -99;
 }
 .chevron:before {
 	border-style: solid;
@@ -49,4 +76,18 @@
 .chevron.chevron_bottom:before {
 	top: 0.15em;
 	transform: rotate(135deg);
+}
+.open {
+	position: absolute;
+	top: -10px;
+}
+.open #logs_body{
+	display: block;
+}
+.closed {
+	position: fixed;
+	bottom: -2px;
+}
+.closed #logs_body{
+	display: none;
 }
