logs not ui endpoint

--- a/dashboard/views/displayGraph.handlebars
+++ b/dashboard/views/displayGraph.handlebars
@@ -29,7 +29,7 @@ limitations under the License.
 	</script>
 	<script src="/js/common.js"></script>
 {{/section}}
-<div id="overlaydiv"></div>
+<div id="overlaydiv" class="hide"></div>
 <div id="container">
 	<div id="headerspan">
 			<table>
