--- a/dashboard/views/partials/logs.handlebars
+++ b/dashboard/views/partials/logs.handlebars
@@ -18,9 +18,9 @@ limitations under the License.
 	<link rel="stylesheet" type="text/css" href="/styles/displayLogs.css">
 {{/section}}
 
-<div id="logs" class="{{logShow}}">
+<div id="logs" class="closed">
 	<div id="logs_wrapper">
-		<button id="show-logs-btn">LOGS <span id="log-chev" class="chevron"></span></button>
+		<button id="show-logs-btn">LOGS <span id="log-chev" class="chevron chevron_top"></span></button>
 	</div>
 	<div id="logs_body">
 	
