--- a/dashboard/views/partials/logs.handlebars
+++ b/dashboard/views/partials/logs.handlebars
@@ -19,11 +19,11 @@ limitations under the License.
 {{/section}}
 
 <div id="logs" class="closed">
-	<div id="logs_wrapper">
+	<div id="logs_header">
 		<button id="show-logs-btn">LOGS <span id="log-chev" class="chevron chevron_top"></span></button>
 	</div>
 	<div id="logs_body">
-	
+
 	</div>
 </div>
 
