--- a/dashboard/public/styles/displayLogs.css
+++ b/dashboard/public/styles/displayLogs.css
@@ -14,11 +14,20 @@
 // limitations under the License.
 */
 
+#logs_container{
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	overflow: auto;
+}
 #logs{
 	width:100%;
 	z-index: 999;
 }
-#logs_wrapper{
+#logs_header{
 	margin-left: auto;
 	margin-right: auto;
 	height:40px;
@@ -28,18 +37,17 @@
 	bottom: -5px;
 	z-index: 99;
 }
-#logs_wrapper button{
+#logs_header button{
 	height: 100%;
 	width: 100%;
 	font-size:16px;
 	font-style:bold;
 }
 #logs_body{
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 7.5%;
+	margin-right: 7.5%;
 	width: 85%;
-	min-height: 100%;
-	position: relative;
+	position: absolute;
 	text-align: center;
 	border: 1px solid black;
 	border-radius: 5px;
@@ -79,12 +87,13 @@
 	transform: rotate(135deg);
 }
 .open {
+	top: 10%;
+	min-height: 90%;
 	position: absolute;
-	top: -10px;
-	height: 100%;
 }
 .open #logs_body{
 	display: block;
+	min-height: calc(100% - 45px);
 }
 .closed {
 	position: fixed;
