--- a/dashboard/views/partials/logsToolbar.handlebars
+++ b/dashboard/views/partials/logsToolbar.handlebars
@@ -15,10 +15,13 @@ limitations under the License.
 --}}
 
 <div id="logs_toolbar">
-	<span id="logs_pagination">
+	<span id="logs_pagination" class="logs_toolbar_item">
 		<span id="logs_pagination_controllers_back" class="logs_pagination_controllers">&laquo;</span>
 		<span id="logs_pagination_info"></span>
 		<span id="logs_pagination_controllers_forward" class="logs_pagination_controllers">&raquo;</span>
+	</span>
+	<span id="logs_count" class="logs_toolbar_item">
+		Logs per page: <input id="logs_count_input" min="1" type="number"/>
 	</span>
 
 </div>
