logs per pg working

--- a/dashboard/views/partials/logsToolbar.handlebars
+++ b/dashboard/views/partials/logsToolbar.handlebars
@@ -21,7 +21,7 @@ limitations under the License.
 		<span id="logs_pagination_controllers_forward" class="logs_pagination_controllers">&raquo;</span>
 	</span>
 	<span id="logs_count" class="logs_toolbar_item">
-		Logs per page: <input id="logs_count_input" min="1" type="number"/>
+		Logs per page: <input id="logs_count_input" min="1" type="number" onclick="this.select()"/> <button id="logs_count_button">&#8634;</button>
 	</span>
 
 </div>
