--- a/dashboard/views/partials/logsToolbar.handlebars
+++ b/dashboard/views/partials/logsToolbar.handlebars
@@ -23,5 +23,7 @@ limitations under the License.
 	<span id="logs_count" class="logs_toolbar_item">
 		Logs per page: <input id="logs_count_input" min="1" type="number" onclick="this.select()"/> <button id="logs_count_button">&#8634;</button>
 	</span>
-
+	<span id="logs_refresh_span">
+		<button id="logs_refresh">Refresh</button>
+	</span>
 </div>
