--- a/dashboard/views/index.handlebars
+++ b/dashboard/views/index.handlebars
@@ -15,6 +15,7 @@ limitations under the License.
 --}}
 
 {{#section 'head'}}
+	<title>{{{title}}}</title>
 	<link rel="stylesheet" type="text/css" href="/styles/index.css">
 {{/section}}
 <div id="graphoptionstitle">
