--- a/dashboard/views/graph.handlebars
+++ b/dashboard/views/graph.handlebars
@@ -35,7 +35,7 @@ limitations under the License.
 	<div id="headerspan">
 			<table>
 				<tr>
-					<td id="titlespan" rowspan={{paramlength}}><a href="http://localhost:8000/" id="title">{{graph_name}}</a></td>
+					<td id="titlespan" rowspan={{paramlength}}><a href="/" id="title">{{graph_name}}</a></td>
 					<td id="blankspan" rowspan={{paramlength}}></td>
 					{{#each params}}
 						{{> (paramlist .) parent=..}}
