--- a/dashboard/views/partials/logs.handlebars
+++ b/dashboard/views/partials/logs.handlebars
@@ -15,7 +15,7 @@ limitations under the License.
 --}}
 
 {{#section 'head'}}
-	<link rel="stylesheet" type="text/css" href="/styles/displayLogs.css">
+	<link rel="stylesheet" type="text/css" href="/styles/graphLogs.css">
 {{/section}}
 
 <div id="logs" class="closed">
@@ -32,5 +32,6 @@ limitations under the License.
 
 
 {{#section 'foot'}}
-	<script src="/js/displayLogs.js"></script>
+	<script src="/js/graphLogs.js"></script>
+	<script src="/js/allLogs.js"></script>
 {{/section}}
