log view working; ui adj

--- a/dashboard/views/logs.handlebars
+++ b/dashboard/views/logs.handlebars
@@ -16,8 +16,10 @@ limitations under the License.
 
 {{#section 'head'}}
 	<title>{{title}}</title>
+	<link rel="stylesheet" type="text/css" href="/styles/listLogs.css">
 	<link rel="stylesheet" type="text/css" href="/styles/allLogs.css">
 	<script src="/js/common.js"></script>
+	<script src="/js/allLogs.js"></script>
 {{/section}}
 <div id="logs_container">
 	<div id="logs_body">
@@ -30,7 +32,7 @@ limitations under the License.
 
 
 {{#section 'foot'}}
-	<script src="/js/allLogs.js"></script>
+	<script src="/js/listLogs.js"></script>
 {{/section}}
 
 
