--- a/dashboard/views/partials/logs.handlebars
+++ b/dashboard/views/partials/logs.handlebars
@@ -16,6 +16,7 @@ limitations under the License.
 
 {{#section 'head'}}
 	<link rel="stylesheet" type="text/css" href="/styles/graphLogs.css">
+	<link rel="stylesheet" type="text/css" href="/styles/allLogs.css">
 {{/section}}
 
 <div id="logs" class="closed">
@@ -31,7 +32,8 @@ limitations under the License.
 </div>
 
 
-{{#section 'foot'}}
-	<script src="/js/graphLogs.js"></script>
-	<script src="/js/allLogs.js"></script>
-{{/section}}
+
+<script src="/js/allLogs.js"></script>
+<script src="/js/graphLogs.js"></script>
+
+
