--- a/dashboard/views/logs.handlebars
+++ b/dashboard/views/logs.handlebars
@@ -16,12 +16,15 @@ limitations under the License.
 
 {{#section 'head'}}
 	<title>{{title}}</title>
-	<link rel="stylesheet" type="text/css" href="/styles/listLogs.css">
 	<link rel="stylesheet" type="text/css" href="/styles/allLogs.css">
+	<link rel="stylesheet" type="text/css" href="/styles/listLogs.css">
 	<script src="/js/common.js"></script>
 	<script src="/js/allLogs.js"></script>
 {{/section}}
 <div id="logs_container">
+	<div id="logs_sidebar">
+
+	</div>
 	<div id="logs_body">
 		{{> logsToolbar}}
 		<div id="logs_body_inner">
