--- a/dashboard/views/partials/logsSidebar.handlebars
+++ b/dashboard/views/partials/logsSidebar.handlebars
@@ -13,9 +13,10 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 --}}
-
+<a href="/">
+	<div id="home_link">
+		Pz-metrics Home</div>
+</a>
 <div id="logs_mapping_list">
-	<input type="checkbox" value="one">One<br>
-	<input type="checkbox" value="two">Two<br>
-	<input type="checkbox" value="three">Three<br>
+
 </div>
