--- a/dashboard/public/styles/listLogs.css
+++ b/dashboard/public/styles/listLogs.css
@@ -22,7 +22,30 @@ html {
 body {
 	margin: 0px;
 }
-
+a {
+	color: black;
+	text-decoration: none;
+}
+a:focus {
+	outline: none;
+}
+#home_link{
+	text-align:center;
+	width:190px;
+	font-size: 18px;
+	border-radius: 5px;
+	border: 1px solid rgb(105, 105, 105);
+	background-color: rgb(242, 241, 240);
+	padding-top: 16px;
+	padding-bottom: 16px;
+	cursor: pointer;
+	margin-bottom: 15px;
+	margin-top: 5px;
+	margin-left: 2px;
+}
+#home_link:hover {
+	background-color: white;
+}
 #logs_count{
 	display: inline-block;
 	padding-left: 20px;
@@ -36,6 +59,7 @@ body {
 	top: 0px;
 	position: fixed;
 	z-index:99;
+	width: calc(100% - 200px);
 }
 #logs_body{
 	float: right;
@@ -48,4 +72,13 @@ body {
 }
 #logs_body_inner{
 	margin-top: 60px;
+}
+#logs_refresh{
+	padding: 5px 10px;
+}
+#logs_mapping_list{
+	margin-left: 5px;
+}
+#logs_mapping_checkbox{
+	margin-bottom: 5px;
 }
