--- a/public/styles/displayGraph.css
+++ b/public/styles/displayGraph.css
@@ -14,8 +14,8 @@
 // limitations under the License.
 */
 
-html {
-	font-family: Verdana,Geneva,sans-serif;
+html{
+	font-family:Arial,Helvetica,sans-serif;
 	margin: 0px;
 }
 body {
