--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -14,8 +14,8 @@
 // limitations under the License.
 */
 
-html {
-	font-family: Verdana,Geneva,sans-serif;
+html{
+	font-family:Arial,Helvetica,sans-serif;
 }
 
 a {
