--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,13 +20,14 @@ limitations under the License.
 {{/section}}
 
 <div id="logindiv">
-	<form method="POST" id="loginform" action="/api/login">
+	<form method="POST" id="loginform" onsubmit="return submitForm()" action="/api/login">
 		<h3>Piazza Authentication Required</h3>
 		{{#if error}}
 			<div id="errormsg">Invalid API key. Try again.</div>
 		{{/if}}
 		API Key: <input id="api" name="api"/>
 		<button type="submit" id="submitform">Submit</button>
+		<input type="hidden" name="returnTo" id="urlreturnto" />
 	</form>
 </div>
 
